testsuite/bsc.names/portRenaming/invalidAttrs/enable/InvalidName.bsv

interface Ifc;
 (* enable = "new&name" *)
 method Action check ();
endinterface

(* synthesize *) 
module mkInvalidName (Ifc);
endmodule
